--- a/package.json
+++ b/package.json
@@ -2,21 +2,24 @@
   "name": "netflix",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://priyankaaggarwalgithub.github.io/netflixapiclone",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "sass": "^1.72.0",
-    "web-vitals": "^2.1.4",
-    "homepage": "https://priyankaaggarwalgithub.github.io/netflixapiclone"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
